feat(backend,frontend): implement comprehensive notification system
Closes #11

## Summary
Adds multi-channel notification system with in-app, email, and webhook
delivery. Users can configure notification preferences per event type
and channel. Admins can set up global webhooks and monitor security
events via audit log.

## Backend Changes
- Add 11 notification types (job, agent, security, system categories)
- Implement NotificationDispatcher for centralized routing
- Add WebSocket hub for real-time in-app notifications
- Add webhook service with platform detection (Discord, Slack, Teams)
- Add agent offline monitoring with configurable buffer period
- Add audit logging for security events with severity levels
- Add 4 database migrations for notification infrastructure
- Add 10 email templates for notification types
- Enhance Mailgun provider with EU region support

## Frontend Changes
- Add NotificationBell component with real-time WebSocket connection
- Add Notification Center page with filtering and bulk actions
- Add Admin Audit Log page with severity filtering
- Add notification preferences in user settings
- Add admin notification settings (global webhook, agent buffer)
- Add full i18n support for 6 languages

## API Endpoints Added
- GET/PUT/DELETE /user/notifications - Notification management
- GET/POST/PUT/DELETE /user/webhooks - User webhook management
- GET /user/notifications/ws - WebSocket connection
- GET/PUT /admin/notification-settings - Global settings
- GET /admin/audit-logs - Audit log with filtering

## Database Tables Added
- notifications - Notification history with delivery status
- user_notification_preferences - Per-user, per-type settings
- user_webhooks - User webhook configurations
- agent_offline_buffer - Agent disconnect tracking
- audit_log - Security event history

## Documentation Added
- User guide for notification preferences and webhooks
- Admin guide for notification settings and audit log
- Architecture reference for notificatio

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,6 +114,7 @@ nav:
     - Wordlists & Rules: user-guide/wordlists-rules.md
     - Analyzing Results: user-guide/analyzing-results.md
     - Analytics Reports: user-guide/analytics-reports.md
+    - Notifications: user-guide/notifications.md
     - Troubleshooting: user-guide/troubleshooting.md
   - User API:
     - user-api/README.md
@@ -141,6 +142,8 @@ nav:
       - Agent Scheduling: admin-guide/operations/scheduling.md
       - Job Settings: admin-guide/operations/job-settings.md
       - Potfile Management: admin-guide/operations/potfile.md
+      - Notifications: admin-guide/operations/notifications.md
+      - Audit Log: admin-guide/operations/audit-log.md
       - System Monitoring: admin-guide/operations/monitoring.md
       - System Diagnostics: admin-guide/operations/diagnostics.md
       - Backup Procedures: admin-guide/operations/backup.md
@@ -187,6 +190,7 @@ nav:
       - Increment Mode: reference/architecture/increment-mode.md
       - Job Completion System: reference/architecture/job-completion-system.md
       - Job Update System: reference/architecture/job-update-system.md
+      - Notification System: reference/architecture/notification-system.md
       - Rule Splitting: reference/architecture/rule-splitting.md
       - File Hash Cache: reference/architecture/file-hash-cache.md
       - Cross-Hashlist Sync: reference/architecture/cross-hashlist-sync.md
