--- a/docker/nginx/templates/provided.conf
+++ b/docker/nginx/templates/provided.conf
@@ -4,7 +4,7 @@ server {
     server_name localhost;
     
     # Allow large file uploads
-    client_max_body_size 50G;
+    client_max_body_size 150G;
 
     # SSL configuration for user-provided certificates
     ssl_certificate /etc/krakenhashes/certs/server.crt;
@@ -44,29 +44,33 @@ server {
     # API proxy
     location /api {
         # Allow large uploads for this location
-        client_max_body_size 50G;
-        
+        client_max_body_size 150G;
+
         proxy_pass https://localhost:31337;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
+
+        # WebSocket support
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
         # Handle self-signed certificates on backend
         proxy_ssl_verify off;
-        
-        # Extended timeouts for large file uploads (2 hours)
-        proxy_connect_timeout 7200s;
-        proxy_send_timeout 7200s;
-        proxy_read_timeout 7200s;
-        
+
+        # Extended timeouts for large file uploads (4 hours)
+        proxy_connect_timeout 14400s;
+        proxy_send_timeout 14400s;
+        proxy_read_timeout 14400s;
+
         # Disable request buffering for uploads
         proxy_request_buffering off;
-        
+
         # Disable response buffering for downloads to allow streaming
         proxy_buffering off;
-        
+
         # Don't limit response size
         proxy_max_temp_file_size 0;
     }
