feat(agent): add Docker containerization with GPU support
Closes #24

## New Files

- **agent/Dockerfile** - NVIDIA CUDA image (devel base for CUDA kernel support)
- **agent/Dockerfile.rocm** - AMD ROCm image
- **agent/docker-compose.yml** - NVIDIA GPU configuration
- **agent/docker-compose.rocm.yml** - AMD GPU configuration
- **agent/docker-compose.example.yml** - Comprehensive examples for all GPU configs
- **agent/.env.example** - Environment variable template
- **.github/workflows/build-agent-image.yml** - CI/CD for Docker image builds
- **docs/agent-guide/docker-deployment.md** - User deployment guide

## Docker Repositories

- `zerkereod/krakenhashes-agent-nvidia` - NVIDIA CUDA builds
- `zerkereod/krakenhashes-agent-amd` - AMD ROCm builds

## CI/CD Behavior

- Push to master with agent/ changes: builds `:dev` tag
- Tag push (v*) with agent version change: builds `:latest` + version tag
- Version format: `1.0.5-abc1234-dev` (dev) or `1.0.5` (release)

## Features

- CUDA 13.1.1 devel base for native CUDA hashcat support
- Hashcat syncs from backend (not bundled)
- Non-root container user for security
- Health checks and logging configuration
- GPU passthrough via NVIDIA Container Toolkit / ROCm

--- a/agent/.gitignore
+++ b/agent/.gitignore
@@ -34,8 +34,9 @@ Thumbs.db
 .env.test.local
 .env.production.local
 
-# Docker
-docker-compose.yml
+# Docker - ignore local overrides, not default compose files
+docker-compose.local.yml
+docker-compose.override.yml
 
 # Cursor
 .cursorignore
