fix(ci): exclude documentation from server image builds
Add paths-ignore to build-dev.yml so documentation-only changes
don't trigger unnecessary server Docker image rebuilds. These
changes should only trigger deploy-docs.yml.

Ignored paths:
- docs/**
- mkdocs.yml
- requirements-docs.txt
- **.md
- Documentation-related workflow files

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - master
       - main
+    paths-ignore:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - 'requirements-docs.txt'
+      - '**.md'
+      - '.github/workflows/deploy-docs*.yml'
+      - '.github/workflows/fix-gh-pages.yml'
+      - '.github/workflows/validate-translations.yml'
 
 env:
   REGISTRY: docker.io
